--- a/src/components/image-carousel/ImageCarousel.module.css
+++ b/src/components/image-carousel/ImageCarousel.module.css
@@ -1,7 +1,7 @@
 .container {
   position: relative;
-  height: 400px;
-  width: 900px;
+  height: 50vh;
+  width: 70%;
   margin: auto;
 }
 
@@ -22,40 +22,16 @@
 .prev-image-exiting {
   opacity: 0;
   z-index: 900;
-  /* transform: translate(-50%); */
 }
 
 .prev-image-exited {
   opacity: 0;
 }
 
-
-
 .container img {
   left: 0;
   position: absolute;
-  width: 900px;
-  height: 400px;
+  width: 100%;
+  height: 65vh;
   object-fit: cover;
 }
-
-/* 
-.container div {
-  transition: visibility 2s ease-in-out, opacity 2s ease-in-out;
-}
-
-.container img {
-  left: 0;
-  position: absolute;
-  width: 900px;
-  height: 400px;
-  object-fit: cover;
-}
-
-.current-image-container {
-  opacity: 1;
-}
-
-.hidden-image-container {
-  opacity: 0;
-}  */
