--- a/src/components/navbar/CategorySelector.module.css
+++ b/src/components/navbar/CategorySelector.module.css
@@ -1,6 +1,6 @@
 .container {
-  position: absolute;
-  width: 1000%;
+  position: relative;
+  /* width: 1000%; */
   border: 1.4px solid black;
   border-radius: 20px;
   z-index: 999;
@@ -9,13 +9,14 @@
   display: flex;
   font-size: 20px;
   overflow: hidden;
-  left: 0;
-  top: 100%;
-  transform: translate(-50%);
+  /* left: 0; */
+  /* top: 100%; */
+  /* transform: translate(-50%); */
 }
 
 .image-container {
   width: 100%;
+  height: 50vh;
   overflow: hidden;
   border-radius: 20px;
   margin: -1px;
