--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -13,9 +13,23 @@
   position: relative;
 }
 
- .gallery-category-selector {
-  /* border: 2px solid red; */
+.category-link {
+  width: 100%;
+}
+
+ .category-dropdown {
+  left:0;
+  top: 100%;
+  position: absolute;
+  transform: scaleY(1);
+  z-index: 20;
+  width: 900%;
+  transform: translate(-30%)
 } 
+
+.categories-hidden {
+  transform: scaleY(0);
+}
 
 .links-section a {
   text-decoration: none;
