--- a/src/components/navbar/CategorySelector.module.css
+++ b/src/components/navbar/CategorySelector.module.css
@@ -16,7 +16,7 @@
 
 .image-container {
   width: 100%;
-  height: 50vh;
+  /* height: 50vh; */
   overflow: hidden;
   border-radius: 20px;
   margin: -1px;
