--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -23,7 +23,7 @@
   position: absolute;
   transform: scaleY(1);
   z-index: 20;
-  width: 900%;
+  width: 40vw;
   transform: translate(-30%)
 } 
 
