Changed dimensions of category selector again

--- a/src/components/navbar/CategorySelector.module.css
+++ b/src/components/navbar/CategorySelector.module.css
@@ -9,6 +9,7 @@
   display: flex;
   font-size: 20px;
   overflow: hidden;
+  height: 400%;
   /* left: 0; */
   /* top: 100%; */
   /* transform: translate(-50%); */
