--- a/src/components/navbar/CategorySelector.module.css
+++ b/src/components/navbar/CategorySelector.module.css
@@ -1,23 +1,24 @@
 .container {
   position: relative;
-  /* width: 1000%; */
-  border: 1.4px solid black;
+  
   border-radius: 20px;
   z-index: 999;
   background-color: white;
-  box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.2), -2px -4px 5px rgba(0, 0, 0, 0.2); 
   display: flex;
   font-size: 20px;
   overflow: hidden;
   height: 400%;
-  /* left: 0; */
-  /* top: 100%; */
-  /* transform: translate(-50%); */
+  /* width: 100%; */
+  aspect-ratio: 16/9;
+  padding: -1px;
+  left: 50%;
+  transform: translate(-60%);
+  /* border: 2px solid red; */
 }
 
 .image-container {
   width: 100%;
-  /* height: 50vh; */
   overflow: hidden;
   border-radius: 20px;
   margin: -1px;
@@ -33,16 +34,21 @@
   margin: 0 1rem 0 0.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
-.category-list a {
+.link-container {
+  padding: 0.5rem 0;
+}
+
+.link-container a {
   text-decoration: none;
-  color: #000;
-  transition: color 0.3s linear;
-  font-weight: 500;
+  font-size: 20px;
+  color: #6b6b6b;
+  font-weight: normal;
+  transition: all 0.3s ease-in-out;
 }
 
-.category-list a:hover {
-  text-decoration: underline;
+.link-container a:hover {
+  color: #000;
 }
