--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -25,6 +25,7 @@
   z-index: 20;
   width: 40vw;
   height: 10vh;
+  min-height: 4.8rem;
   transform: translate(-30%);
   /* border: 2px solid green; */
 } 
@@ -37,7 +38,7 @@
   text-decoration: none;
   font-size: 20px;
   color: #6b6b6b;
-  font-weight: bold;
+  font-weight: normal;
   transition: all 0.3s ease-in-out;
 }
 
