--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
+@font-face {
+  font-family: "Frank Ruhl Libre";
+  src: url("./fonts/FrankRuhlLibre-Regular.ttf") format("truetype");
+  font-weight: normal;
+}
+
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: "Castoro", sans-serif;
+  font-family: "Frank Ruhl Libre", sans-serif;
 }
 
 code {
