--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -1,17 +1,18 @@
 .background {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: rgba(0, 0, 0, 0.85);
   z-index: 900;
   cursor: pointer;
 }
 
 .modal-container {
+  /* border: 2px solid red; */
   background-color: #fff;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
