--- a/src/components/gallery/ImageModal.module.css
+++ b/src/components/gallery/ImageModal.module.css
@@ -12,7 +12,6 @@
 
 .image {
   height: 85vh;
-  margin: -0.2rem -0.2rem -2rem -0.2rem;
 }
 
 .arrow-container {
@@ -25,4 +24,12 @@
 
 .back-arrow {
   left: -5rem;
+}
+
+.close-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  transform: translate(50%, -50%);
 }
