--- a/src/components/UI/link-dropdown/LinkDropdown.module.css
+++ b/src/components/UI/link-dropdown/LinkDropdown.module.css
@@ -15,6 +15,7 @@
   box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.2), -2px -4px 5px rgba(0, 0, 0, 0.2);
   border-radius: 20px;
   padding: 0rem 0.6rem;
+  z-index: 100;
 }
 
 .dropdown--hidden {
@@ -29,4 +30,3 @@
 .dropdown__link {
   margin-bottom: 0.6rem;
 }
-
