--- a/src/components/blog/BlogNavigation.module.css
+++ b/src/components/blog/BlogNavigation.module.css
@@ -1,40 +1,39 @@
 .nav {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    padding: 0 1rem 0 1rem;
-    font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 0 1rem 0 1rem;
+  font-size: 20px;
 }
 
 .introduction {
-    width: 80%;
-    margin: 0 0 2rem 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 80%;
+  margin: 0 0 2rem 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .introduction img {
-    margin: 2rem;
-    width: 80%;
-    border-radius: 50%;
+  margin: 2rem;
+  width: 80%;
+  border-radius: 50%;
 }
 
 .links {
-    list-style: none;
+  list-style: none;
 }
 
 .links a {
-    text-decoration: none;
-    color: grey;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 20px;
+  color: #6b6b6b;
+  font-weight: normal;
+  transition: all 0.1s ease-in-out;
 }
-
-.links a:visited {
-    color: grey;
-}
-
 
 .links a:hover {
-    color: black;
+  color: #000;
 }
