--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: "Frank Ruhl Libre";
-  src: url("./fonts/FrankRuhlLibre-Regular.ttf") format("truetype");
-  font-weight: normal;
-}
 
 body {
   margin: 0 0 2rem 0;
@@ -24,6 +19,6 @@ code {
   font-weight: 500;
 }
 
-.hidden {
+.image-modal--hidden {
   display: none;
 }
